--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # When setting this field to "pilot", please uncomment the
 # pilot_lesson_site, pilot_pre_survey, and pilot_post_survey
 # lines further down this file and add the URL to the relevant lesson site.
-carpentry: "swc"
+carpentry: "pilot"
 
 # This option is currently only needed for
 # Data Carpentry and Software Carpentry workshops.
@@ -40,7 +40,7 @@ curriculum: "FIXME"
 # value of the variable below ("flavor") to get the schedule and installation
 # instructions updated accordingly (valid values are 'r' or 'python').
 # Note: this is only for Data Carpentry and SWC at this time.
-flavor: "FIXME"
+flavor: "r"
 
 # Overall title for the Workshop.
 # This variable is used to (optionally) add a title in the "jumbotron"
@@ -48,19 +48,19 @@ flavor: "FIXME"
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "Workshop Title"
+title: "High-dimensional statistics with R"
 
 #------------------------------------------------------------
 # Pilot workshop settings (only relevant for lesson pilots).
 #
 # For a lesson pilot, uncomment the line below and add the URL of the lesson site.
-# pilot_lesson_site: "put the URL of the lesson being piloted here"
+pilot_lesson_site: "https://carpentries-incubator.github.io/high-dimensional-stats-r/"
 #
 # For a lesson pilot, uncomment the line below and add the URL of your pre-workshop survey
-# pilot_pre_survey: "put the URL of your pre-workshop survey here"
+pilot_pre_survey: "put the URL of your pre-workshop survey here"
 #
 # For a lesson pilot, uncomment the line below and add the URL of your post-workshop survey
-# pilot_post_survey: "put the URL of your post-workshop survey here"
+pilot_post_survey: "put the URL of your post-workshop survey here"
 #
 #------------------------------------------------------------
 
@@ -74,7 +74,7 @@ kind: "workshop"
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
 # Please don't change it: <USERNAME>/<PROJECT> is correct.
-repository: <USERNAME>/<PROJECT>
+repository: edcarp/Ed-DaSH-high-dimensional-stats-template
 
 # Email address, no mailto:
 # (Don't change this -- the contact address for your workshop will be set
